# FcEmu

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile.test  LICENSE  README.md  build_web.sh  package.json  playwright.config.js  run_tests.sh  vite.config.js
.github/workflows/: ci.yml  deploy.yml
docs/: DESIGN.md  REVIEW_REPORT.md  TODO.md
src/core/: bus.rs  mod.rs  region.rs  wasm.rs
src/core/apu/: mod.rs
src/core/cartridge/: mapper.rs  mod.rs
src/core/cpu/: mod.rs
src/core/ppu/: mod.rs  registers.rs  render.rs
static/: canvas.js  index.html  mobile.html  mobile.js  test.html
tests/: analyze_active_audio.py  analyze_audio.py  benchmark_runner.py  compare_before_after.py  download_test_roms.sh  generate_mock_roms.py  integration_tests.rs  run_all_external_tests.py  test_desktop.js  test_mobile.js  test_netplay.js  test_replay.js  verify_blargg_runner.py  verify_flappy_pal.py  verify_golden_images.py  verify_mario.py  verify_nestest_trace.py  verify_nestress.py  verify_squirrel.py
tests/roms/: smb_mock.nes
